--- a/Common.JSON/Common.JSON.csproj
+++ b/Common.JSON/Common.JSON.csproj
@@ -43,9 +43,10 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Enums.cs" />
     <Compile Include="Functions.cs" />
-    <Compile Include="JSONArray.cs" />
-    <Compile Include="JSONObject.cs" />
+    <Compile Include="JArray.cs" />
+    <Compile Include="JObject.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
