--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,40 @@
-.vs/
-obj/
+# CDS-specific files
+.*
+!.gitignore
+*.dbmdl
+*.dll
+*.exe
+*.jfm
+*.lnk
+*.log
+*.scc
+*.settings
+*.user
+*.xls
+*.xlsx
+_*.json
+~*.*
+!*.pfx
+BuildAll.bat
+BuildAll.log
+CleanAll.bat
+ClearUserPrograms.bat
+ClearUserSettings.bat
+PublishAll.bat
+Thumbs.db
+VVBackup.bat
 bin/
+obj/
+x86/
+Debug/
+Release/
+packages/
+TestData/
+!Bin/
+Bin/*.exe
+Bin/*.dll
+Bin/*.xml
+Bin/*.config
+Bin/OfficeInterop/
+Bin/Security/
+Audit Results/
