NOT WORKING YET charreader and jbase

--- a/Common.JSON/Common.JSON.csproj
+++ b/Common.JSON/Common.JSON.csproj
@@ -46,8 +46,10 @@
     <Compile Include="Enums.cs" />
     <Compile Include="Functions.cs" />
     <Compile Include="JArray.cs" />
+    <Compile Include="JBase.cs" />
     <Compile Include="JObject.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="CharReader.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Security\CodeSigning.pfx" />
