--- a/Common.JSON/Common.JSON.csproj
+++ b/Common.JSON/Common.JSON.csproj
@@ -55,8 +55,7 @@
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <PropertyGroup>
-    <PostBuildEvent>if exist "$(ProjectDir)bin\Release\$(TargetFileName)" xcopy /d /y "$(ProjectDir)bin\Release\$(TargetFileName)" "\Bin"
-if exist "$(ProjectDir)bin\Release\$(TargetFileName).config" xcopy /d /y "$(ProjectDir)bin\Release\$(TargetFileName).config" "\Bin"</PostBuildEvent>
+    <PostBuildEvent>IF "$(ConfigurationName)"=="Release" XCOPY /Y "$(TargetPath)" "$(ProjectDir)..\..\EXE"</PostBuildEvent>
   </PropertyGroup>
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
